# ZernikePy

./: .gitignore  LICENSE  README.md  calculate.py  pyproject.toml  test.py  zernike.py
pyzernike/: __init__.py  plots.py  zernike_polynomials.py
src/: calculate.py  plots.py
zernikepy/: __init__.py  zernike_polynomials.py
