[project]
name = "ZernikePy"
version = "0.0.5"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib"
]
authors = [
  {name = "Yan Liu", email = "yanyan@ik.me"}
]
maintainers = [
  {name = "Yan Liu", email = "yanyan@ik.me"}
]

description = "A minimalistic Python package to generate individual or a series of Zernike polynomials of arbitrary orders with visualization."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["zernike", "psf", "optics", "polynomials", "basis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yanyan-liu/ZernikePy"
Repository = "https://github.com/yanyan-liu/ZernikePy"
Issues = "https://github.com/yanyan-liu/ZernikePy/issues"